--- a/Rainfall_prediction_bagalkot.ipynb
+++ b/Rainfall_prediction_bagalkot.ipynb
@@ -31,11 +31,11 @@
    "outputs": [],
    "source": [
     "f_path = '/Users/mayankchourasia/Desktop/crop_yield/bagalkot_rain.csv'\n",
-    "file = open(f_path)# opening the learning data\n",
-    "reader = csv.reader(file)# creating a reader\n",
+    "file = open(f_path)\n",
+    "reader = csv.reader(file)\n",
     "flag = 0# for avoiding the headers in csv file from including in arrays\n",
-    "dataRain = array([])# stores the annual rain data\n",
-    "dataYear = array([])# correspnding year\n",
+    "dataRain = array([])\n",
+    "dataYear = array([])\n",
     "for i in reader:\n",
     "    if flag == 0:\n",
     "        flag = 1\n",
@@ -43,7 +43,7 @@
     "    elif flag == 1:\n",
     "        startYearOfTestDataTrain = int(i[0])\n",
     "        flag = 2\n",
-    "    dataYear = append(dataYear,int(i[0]))#taking years\n",
+    "    dataYear = append(dataYear,int(i[0]))\n",
     "    dataRain = append(dataRain,float(i[1]))"
    ]
   },
@@ -60,7 +60,7 @@
     "    elif flag == 1:\n",
     "        startYearOfTestDataTrain = int(i[0])\n",
     "        flag = 2\n",
-    "    dataYear = append(dataYear,int(i[0]))#taking years\n",
+    "    dataYear = append(dataYear,int(i[0]))\n",
     "    dataRain = append(dataRain,float(i[1]))"
    ]
   },
@@ -113,18 +113,18 @@
    ],
    "source": [
     "plot(dataYear[year:year+13],dataRain[year:year+13],'o')# plotting the actual rain data on graph as blue dots\n",
-    "plot(dataYear[year:year+13],polyval(p1,dataYear[year:year+13]),'r-')# drawing a curve formed by polynomial\n",
+    "plot(dataYear[year:year+13],polyval(p1,dataYear[year:year+13]),'r-')\n",
     "xlabel(\"Years\"+str(year+startYearOfTestDataTrain))\n",
     "ylabel(\"RainFall\")\n",
     "title(\"Prototype1\")\n",
-    "#print(dataYear[year],dataRain[year],polyval(p1,dataYear[year]),sep = \" \")\n",
+    "\n",
     "show()\n",
     "\n",
     "\n",
     "file.close()\n",
     "\n",
-    "testDataYear = array([])# stores the test data years\n",
-    "testDataRain = array([])# stores the test data rain\n",
+    "testDataYear = array([])\n",
+    "testDataRain = array([])\n",
     "file = open(f_path)\n",
     "reader = csv.reader(file)\n",
     "flag1 = 0\n",
@@ -299,12 +299,12 @@
     "print(\"Year\"+\"\\t\\t\"+\"Actual Rain\"+\"\\t\\t\"+\"Predicted Rain\")\n",
     "print(\"--------------------------------------------------------------------\")\n",
     "\n",
-    "#for i in range(testDataYear.size):\n",
-    "    #print(testDataYear[i],\"\\t\",testDataRain[i],\"\\t\",predictedData[i])\n",
+    "\n",
+    "    \n",
     "year = (2002 - startYearOfTestData)\n",
     "temp = startYearOfTestData\n",
     "i = 0\n",
-    "#print(predictedData[year:year+13])\n",
+    "\n",
     "while i < int(testDataRain.size):\n",
     "    if predictedData[i]<0:\n",
     "        predictedData[i] = 0\n",
@@ -312,13 +312,13 @@
     "    i+=1\n",
     "    startYearOfTestData+=1\n",
     "\n",
-    "plot(testDataYear[year:year+13],testDataRain[year:year+13],'r--')# actual curve\n",
-    "plot(testDataYear[year:year+13],predictedData[year:year+13],\"b--\")# predicted curve\n",
+    "plot(testDataYear[year:year+13],testDataRain[year:year+13],'r--')\n",
+    "plot(testDataYear[year:year+13],predictedData[year:year+13],\"b--\")\n",
     "xlabel(\"Years\"+str(year+temp))\n",
     "ylabel(\"RainFall\")\n",
     "title(\"Prototype1\")\n",
     "show()\n",
-    "#  ----------:::::::::::>>>>>\n",
+    "\n",
     "rainfit = p1[0] * dataYear**2 + p1[1] * dataYear + p1[2]"
    ]
   },
