removed_uncessary_comments

--- a/Rainfall_prediction_bagalkot.ipynb
+++ b/Rainfall_prediction_bagalkot.ipynb
@@ -33,7 +33,7 @@
     "f_path = '/Users/mayankchourasia/Desktop/crop_yield/bagalkot_rain.csv'\n",
     "file = open(f_path)\n",
     "reader = csv.reader(file)\n",
-    "flag = 0# for avoiding the headers in csv file from including in arrays\n",
+    "flag = 0\n",
     "dataRain = array([])\n",
     "dataYear = array([])\n",
     "for i in reader:\n",
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "plot(dataYear[year:year+13],dataRain[year:year+13],'o')# plotting the actual rain data on graph as blue dots\n",
+    "plot(dataYear[year:year+13],dataRain[year:year+13],'o')\n",
     "plot(dataYear[year:year+13],polyval(p1,dataYear[year:year+13]),'r-')\n",
     "xlabel(\"Years\"+str(year+startYearOfTestDataTrain))\n",
     "ylabel(\"RainFall\")\n",
@@ -292,8 +292,7 @@
     }
    ],
    "source": [
-    "predictedData = p1[0] * testDataYear**2 + p1[1] * testDataYear + p1[2]# stores the predicted rain data\n",
-    "#predictedData = p1[0] * testDataYear**3 + p1[1] * testDataYear**2 + p1[2] * testDataYear + p1[3]\n",
+    "predictedData = p1[0] * testDataYear**2 + p1[1] * testDataYear + p1[2]\n",
     "print(\"\\n\\nweights of model_fitted ===> \")\n",
     "print('\\n',p1,'\\n\\n')\n",
     "print(\"Year\"+\"\\t\\t\"+\"Actual Rain\"+\"\\t\\t\"+\"Predicted Rain\")\n",
